generate esm bundle
this is run through `babel` and used as `pkg.module`, cf.
https://github.com/rollup/rollup/wiki/pkg.module

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "hilbert-curve",
   "version": "1.0.1",
   "description": "Hilbert curve mapping",
-  "main": "dist/hilbert-curve.js",
-  "module": "src/index.js",
-  "unpkg": "dist/hilbert-curve.min.js",
-  "jsdelivr": "dist/hilbert-curve.min.js",
+  "main": "dist/hilbert-curve.umd.js",
+  "module": "dist/hilbert-curve.esm.js",
+  "unpkg": "dist/hilbert-curve.umd.min.js",
+  "jsdelivr": "dist/hilbert-curve.umd.min.js",
   "scripts": {
     "build": "rollup -c",
     "pretest": "npm run build",
