--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.1.1"
+  },
+  "dependencies": {
+    "@mhyfritz/bin-data": "0.0.3"
   }
 }
