--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hilbert-curve",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0",
   "description": "Hilbert curve mapping",
   "main": "dist/hilbert-curve.umd.js",
   "module": "dist/hilbert-curve.esm.js",
